# FVisionA

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fyc/fvision/capture/: CaptureActivity.java  CaptureFragment.java  CaptureRenderer.java  CaptureUtil.java
app/src/main/java/com/fyc/fvision/capture/sensor/: CardboardWrapper.java  SensorWrapper.java
app/src/main/java/com/fyc/fvision/common/: BaseActivity.java  FApplication.java  FLog.java  GLUtil.java  PermissionUtil.java
app/src/main/java/com/fyc/fvision/display/: DisplayActivity.java  DisplayFragment.java  FGLSurfaceView.java  FRenderer.java
app/src/main/java/com/fyc/fvision/stereo/: Stereo.java
app/src/main/jni/: FLog.h  FVisionA_jni.cpp
app/src/main/jni/capture/: Capture.cpp  Capture.h
app/src/main/jni/cardboard/: CardboardWrapper.cpp  CardboardWrapper.h  util.cc  util.h
app/src/main/jni/display/: Renderer.cpp  Renderer.h
app/src/main/jni/stereo/: Define.h  DisparityUtil.cpp  DisparityUtil.h  Optimization.cpp  Optimization.h  SelfCalibration.cpp  SelfCalibration.h  Stereo.cpp  Stereo.h  StereoImage.cpp  StereoImage.h  Util.cpp  Util.h
app/src/main/res/drawable/: ic_button.xml  ic_capture.xml  sel_chk.xml
app/src/main/res/layout/: activity_base.xml  fragment_capture.xml  fragment_display.xml  layout_key_item.xml
app/src/main/res/layout-land/: fragment_capture.xml
app/src/main/res/raw/: capture_fsh.glsl  capture_vsh.glsl  display_vsh.glsl
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
